<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ui.sign_up.SignUpFragment">

    <ImageView
        android:id="@+id/product_imageView"
        android:layout_width="146dp"
        android:layout_height="77dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/yjahz_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_corners_top"
            android:paddingBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <EditText
                android:id="@+id/editTextTextEmailAddress"
                style="@style/email_edittext_style"
                android:ems="10"
                android:hint="@string/write_your_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <EditText
                android:id="@+id/editTextTextPassword"
                style="@style/email_edittext_style"
                android:ems="10"
                android:hint="@string/write_8_character_at_least"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_corners_bottom"
                android:elevation="50dp"
                android:paddingHorizontal="40sp"
                android:paddingVertical="20dp"
                android:text="@string/sign_up"
                android:textColor="#484848"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/email_style"
                android:text="@string/email"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/name_textView" />

            <TextView
                android:id="@+id/password_textView"
                style="@style/email_style"
                android:text="@string/password"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
                app:layout_constraintStart_toStartOf="@+id/textView2" />

            <TextView
                android:id="@+id/forgot_the_password_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/password_textView"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextConfirmPassword" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/background_corners_green"
                android:paddingHorizontal="116sp"
                android:paddingVertical="9dp"
                android:text="@string/sign_up_small"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_the_password_textView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/have_an_account"
                android:textColor="#484848"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.446"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

            <TextView
                android:id="@+id/log_in_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/log_in_small"
                android:textColor="#BA935C"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                style="@style/email_edittext_style"
                android:layout_marginTop="52dp"
                android:ems="10"
                android:hint="@string/write_14_character"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/name_textView"
                style="@style/email_style"
                android:layout_marginStart="48dp"
                android:text="@string/name"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextPhone"
                style="@style/email_edittext_style"
                android:ems="10"
                android:hint="@string/write_11_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

            <TextView
                android:id="@+id/phone_textView"
                style="@style/email_style"
                android:text="@string/phone_number"
                app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
                app:layout_constraintStart_toStartOf="@+id/textView2" />

            <EditText
                android:id="@+id/editTextTextConfirmPassword"
                style="@style/email_edittext_style"
                android:ems="10"
                android:hint="@string/write_your_password_again"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            <TextView
                android:id="@+id/confirm_password_textView"
                style="@style/email_style"
                android:text="@string/confirm_password"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextConfirmPassword"
                app:layout_constraintStart_toStartOf="@+id/password_textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>