<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:elevation="50dp"
        android:paddingVertical="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="40sp"
            android:layout_height="match_parent"
            android:paddingVertical="5dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_textView"
            style="@style/top_title_style"
            android:text="@string/home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/options_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:paddingVertical="3sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/option_imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/options_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/option_imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3sp"
                android:src="@drawable/options_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_imageView1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cart_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/options_view"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cart_imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cart_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cart_imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/cart_botton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cart_imageView1" />

            <ImageView
                android:id="@+id/cart_imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/cart_botton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cart_imageView1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/name_text"
        style="@style/top_title_style"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        tools:text="Hello Ahmed"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar_layout" />

    <TextView
        android:id="@+id/address_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="Riyadh ( 15 -Jasmine neighbo..."
        app:layout_constraintStart_toStartOf="@+id/name_text"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="18sp"
        android:layout_marginStart="24dp"
        android:src="@drawable/right_arrow"
        app:layout_constraintStart_toEndOf="@+id/address_text"
        app:layout_constraintTop_toTopOf="@+id/address_text" />

    <EditText
        android:id="@+id/search_editTextText"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_corners_white_gradient"
        android:elevation="50dp"
        android:ems="10"
        android:hint="@string/search_for_fav_food"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/name_text"
        app:layout_constraintTop_toBottomOf="@+id/address_text" />

    <FrameLayout
        android:id="@+id/search_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/search_editTextText"
        app:layout_constraintTop_toTopOf="@+id/search_editTextText">

        <ImageView
            android:id="@+id/search_image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search_back" />

        <ImageView
            android:id="@+id/search_image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/search_front" />
    </FrameLayout>

    <ImageView
        android:id="@+id/filterImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/filter"
        app:layout_constraintBottom_toBottomOf="@+id/search_view"
        app:layout_constraintStart_toEndOf="@+id/search_view"
        app:layout_constraintTop_toTopOf="@+id/search_view" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_editTextText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/categories_textView"
                style="@style/categories_textView_style"
                android:text="@string/categories"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/popular_textView"
                style="@style/categories_textView_style"
                android:text="@string/popular_now"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categories_recyclerView" />

            <TextView
                android:id="@+id/trending_textView"
                style="@style/categories_textView_style"
                android:text="@string/trending_now"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popular_recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categories_recyclerView"
                style="@style/recycle_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categories_textView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_recyclerView"
                style="@style/recycle_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popular_textView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trending_recycleView"
                style="@style/recycle_style"
                android:layout_height="170dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trending_textView" />


            <TextView
                android:id="@+id/categories_view_all"
                style="@style/view_all_text_style"
                android:text="@string/view_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/categories_textView" />

            <TextView
                android:id="@+id/popular_now._view_all"
                style="@style/view_all_text_style"
                android:text="@string/view_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/categories_textView" />

            <TextView
                android:id="@+id/popular_view_all"
                style="@style/view_all_text_style"
                android:text="@string/view_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/popular_textView" />

            <TextView
                android:id="@+id/trending_view_all"
                style="@style/view_all_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/trending_textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>